--- a/gb/20/1/24/n11816560.md
+++ b/gb/20/1/24/n11816560.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jvzcdz2791/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jvzcdz2791/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rmxaqt314/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rmxaqt314/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rmxaqt314/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>干细胞募捐运动马拉松本周末抵达列治文山</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月23日】“全国<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E5%B9%B2%E7%BB%86%E8%83%9E%E5%8B%9F%E6%8D%90.md">干细胞募捐</a>运动马拉松第7波”，将于本周末在<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E5%88%97%E6%B2%BB%E6%96%87%E5%B1%B1.md">列治文山</a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%B9%BF%E5%9C%BA.md">时代广场</a>举行干细胞募捐登记活动。该运动旨在协助加拿大血库（Canadian Blood Services）推广和举行成人干细胞捐献者登记活动，以拯救急需干细胞移植的患者。</p>
-<p>多个社区和宗教组织合作的“全国<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E5%B9%B2%E7%BB%86%E8%83%9E%E5%8B%9F%E6%8D%90.md">干细胞募捐</a>运动马拉松”，已经在加拿大14个城市展开。该运动旨在协助加拿大血库促进和进行成人干细胞捐献者的登记，以拯救急需干细胞移植的病患者。</p>
-<p>一直以来，颐康中心王裕佳医生及小丽莎骨髓基金会联同“<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E5%B1%95%E6%9C%9B%E9%9D%92%E5%B9%B4.md">展望青年</a>”（Vision Youth）、病者亲友组合等多个组织和义工，以救人无界限精神，跨城市接力举办募捐干细胞捐赠者登记活动。现在推广和登记运动的网络己扩展至全国19个主要城市，由东岸纽芬兰省圣约翰斯市至西岸温哥华。</p>
+<p>【大纪元2020年01月23日】“全国<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%B9%B2%E7%BB%86%E8%83%9E%E5%8B%9F%E6%8D%90.md#1">干细胞募捐</a>运动马拉松第7波”，将于本周末在<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%88%97%E6%B2%BB%E6%96%87%E5%B1%B1.md#1">列治文山</a><ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%B9%BF%E5%9C%BA.md#1">时代广场</a>举行干细胞募捐登记活动。该运动旨在协助加拿大血库（Canadian Blood Services）推广和举行成人干细胞捐献者登记活动，以拯救急需干细胞移植的患者。</p>
+<p>多个社区和宗教组织合作的“全国<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%B9%B2%E7%BB%86%E8%83%9E%E5%8B%9F%E6%8D%90.md#1">干细胞募捐</a>运动马拉松”，已经在加拿大14个城市展开。该运动旨在协助加拿大血库促进和进行成人干细胞捐献者的登记，以拯救急需干细胞移植的病患者。</p>
+<p>一直以来，颐康中心王裕佳医生及小丽莎骨髓基金会联同“<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%B1%95%E6%9C%9B%E9%9D%92%E5%B9%B4.md#1">展望青年</a>”（Vision Youth）、病者亲友组合等多个组织和义工，以救人无界限精神，跨城市接力举办募捐干细胞捐赠者登记活动。现在推广和登记运动的网络己扩展至全国19个主要城市，由东岸纽芬兰省圣约翰斯市至西岸温哥华。</p>
 <p>本周末干细胞募捐登记活动如下：</p>
-<p>地点：<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%B9%BF%E5%9C%BA.md">时代广场</a>（Times Square, 550 Highway 7, Richmond Hill）</p>
+<p>地点：<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%B9%BF%E5%9C%BA.md#1">时代广场</a>（Times Square, 550 Highway 7, Richmond Hill）</p>
 <p>日期：2020年1月25曰至26日（周六和周日），每日中午至下午6点</p>
-<p>登记非常简单，基本只须填写表格，和利用棉花棒在口腔四角擦擦。即使您不是某一个患者的兼容匹配，您也可以挽救其他有需要的人的生命。加拿大血库鼓励17至35岁的加拿大公民/居民、享有有效的省级医疗保险的年轻人进行登记。如果您在或不在该年龄范围内，您也可以捐赠血或脐带血干细胞，这对挽救生命也至关重要。脐带血采集在健康宝宝安全到达后才开始。该过程安全，无痛，对母亲和婴儿的风险最小。请上加拿大血库网站进行登记或了解详细信息：<a href="https://blood.ca/en">blood.ca</a></p>
+<p>登记非常简单，基本只须填写表格，和利用棉花棒在口腔四角擦擦。即使您不是某一个患者的兼容匹配，您也可以挽救其他有需要的人的生命。加拿大血库鼓励17至35岁的加拿大公民/居民、享有有效的省级医疗保险的年轻人进行登记。如果您在或不在该年龄范围内，您也可以捐赠血或脐带血干细胞，这对挽救生命也至关重要。脐带血采集在健康宝宝安全到达后才开始。该过程安全，无痛，对母亲和婴儿的风险最小。请上加拿大血库网站进行登记或了解详细信息：<ahref="https://blood.ca/en">blood.ca</a></p>
 <p>在加拿大，大约有一千名癌症患者即使在化疗后也没有治愈，他们迫切需要找到干细胞和干细胞移植的匹配！他们唯一的生存希望是干细胞移植。然而，这些病人尚未找到合适的干细胞，他们是感到绝望的，干细胞捐献者的登记可能意味着患者的“新生命”。不过，得到匹配干细胞是万分困难的。超过70%需要干细胞或骨髓移植的患者在其家庭中找不到匹配，而需要其他捐赠者进行治疗。而匹配条件更包括遗传及种族因素。虽然白种人登记人数较多，也很难得到匹配，非白种病人，就更难，而跨种族婚姻的后代，因其有多于一种血缘，配对更难，越多跨种族文化，越难。病患者需要更多种族多样的干细胞捐献者。</p>
 <p>像菲律宾裔的温哥华患者Martin Lintag和华裔血统的埃德蒙顿患者Malinda，就很难找到匹配的干细胞。</p>
 <p>Martin被诊断出患有两种罕见的血癌：急性淋巴细胞白血病和急性髓性白血病。Martin家庭在2009年已经失去他们最小的儿子，这家人希望为Martin找到匹配的干细胞。不过，很不幸，Martin等不及，去世了。Martin是菲律宾裔，数据库只有0.85%的成人干细胞捐献者是菲律宾裔人。</p>
@@ -19,43 +19,56 @@
 <p>单一族裔血统统患者很难获得匹配的干细胞，菲律宾人或中国人患者，比白人混血病患者更难获得配对的干细胞，混血族的患者更加困难。这一方面是由于遗传复杂性，另一方面是干细胞捐献者的登记数量。像温哥华的Jeremy Chow和新西兰奥克兰的Jo Mitchell这样的混血儿病患者在寻找匹配的干细胞方面，面临更多困难。</p>
 <p>Jeremy和Jo都是混合种族。Jeremy是一位有妻子和两个小孩的年轻人，被诊断出患有急性髓性白血病。 Jo是一位年轻母亲，现在她的急性淋巴细胞白血病复发。在全球干细胞登记册上搜索了3,200万人，甚至新西兰总理都帮Jo呼吁之后，仍然没有找到匹配的干细胞。对于Jo和Jeremy来说，他们知道最好的匹配是一些与自己拥有相同种族背景的捐赠者。然而，在加拿大，只有3%的加拿大血库干细胞登记是由混血人士组成。对Jo而言，在新西兰，很少会有募捐活动，因此更是觉得如大海捞针。</p>
 <p>虽则如此，但还有希望。自2016年我们的干细胞驱动活动以来，我们帮助三位病患者找到了匹配的干细胞，移植完成并正在恢复！所以请帮助病患者，给他们新生命！</p>
-<p>拯救生命没有宗教、种族、或地缘政治边界，你可以拯救Jeremy， Jo，Melinda或世界上其他急切需要你帮助的病人。请前往募捐干细胞登记活动，或上加拿大血库<a href="https://blood.ca/en">网站</a>登记。你有力量给他们新生命！◇</p>
+<p>拯救生命没有宗教、种族、或地缘政治边界，你可以拯救Jeremy， Jo，Melinda或世界上其他急切需要你帮助的病人。请前往募捐干细胞登记活动，或上加拿大血库<ahref="https://blood.ca/en">网站</a>登记。你有力量给他们新生命！◇</p>
 <p>责任编辑：吴玌</p>
 <p>&nbsp;</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11816560.htm">干细胞募捐运动马拉松本周末抵达列治文山</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812336.htm">袁斌：从萨斯到武汉肺炎 中共撒谎本性不变</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11811543.htm">【拍案惊奇】武汉肺炎汹汹 多国防备 朝鲜锁国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811322.htm">美确诊首例武汉肺炎患者 加拿大加强机场检测</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810793.htm">【四维健康】杨景端：武汉肺炎为何从“这个时间”开始激增</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811379.htm">武汉肺炎蔓延至22省 全国已确诊324例</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】武汉肺炎现第2代病例 湖北8市封城</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814611.htm">武汉封城令引发恐慌 大批民众逃亡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11814163.htm">【内幕】大批医护感染 疫情远超公开数据</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11813994.htm">武汉封城：离境通道关闭 公交全停</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11793221.htm">【历史回眸】做梦都是灭共复国的上将陈诚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11778584.htm">【命理】天灾注死者天有定 古北京大地震幼儿见证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11797750.htm">台湾2020大选结果命理观</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11793176.htm">【才子佳人】才貌双全的施良娣为何下嫁黔娄</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811186.htm">瘟疫被严重隐瞒 习近平发声 武汉人惊醒</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810001.htm">武汉肺炎急速蔓延 专家：“毒王”或已出现</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810508.htm">武汉肺炎患者去世 家人悲愤：死的没有尊严</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816092.htm">【十字路口】武汉肺炎3大风险恐加速疫情蔓延</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814532.htm">【拍案惊奇】武汉封城事已迟 市民恐慌外逃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11808058.htm">【思想领袖】刘慧卿：中共如何渗透香港社会</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809509.htm">林志玲低调现身《红白》 全程观赏Akira演出</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11815387.htm">曾之乔与辰亦儒宣布结婚 小年夜甜晒合照</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11808467.htm">武汉肺炎刷屏 影视股狂跌 徐峥新片宣布提档</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809704.htm">长相滑稽的小狗在网上走红 最终被人收养</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810594.htm">惧怕赴一线抗击武汉肺炎 一网友求朱一龙打气</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/4/12/n11180599.md#1">多社团及宗教组织呼吁捐赠干细胞</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/7/8/n11371067.md#1">大陆器官移植游 “活死人”黑幕曝光</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/7/18/n11394087.md#1">全国干细胞募捐第五波登记活动开始</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/9/12/n11516835.md#1">全国干细胞募捐活动周日Stouffville Rd车展举行</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/9/22/n11539095.md#1">欧洲器官移植大会 中共活摘器官引专家热议</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/25/n12501390.md#1">营救12港人 多伦多200人快闪声援</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/22/n12492728.md#1">士嘉堡医疗团队推出车中注射流感疫苗服务</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/19/n12484814.md#1">台商会汽车剧院分享第二届多伦多台湾影展</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/15/n12479360.md#1">加118团体及议员吁对港人启动“安全港计划”</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/13/n12471116.md#1">耆晖会举行周年大会暨职员、义工嘉许典礼</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jvzcdz2791/djy/blob/master/gb/20/1/24/n11816560.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jvzcdz2791/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jvzcdz2791/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/23/n9763033.md#1" target="_blank">林辉：兵仙韩信辉耀历史 中共歪批其“反动”</a></li><li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525798.md#1">【重播】川普竞选团队费城召开新闻会</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1">【直播】川普总统在白宫发表重要讲话</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520407.md#1">【重播】川普团队：内华达政府纵容非法投票</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】川普宣布在宾州等三州获胜</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/26/n12501740.md#1">【重播】美国大选日 17小时接力直播</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524027.md#1">长荣女大生双亲离台 父紧抱爱女骨灰、母泪流不止</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526176.md#1">蚂蚁集团暂缓上市 赵薇等明星被指亏大了</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12522915.md#1">夫妻俩持不同政见 黄秋生有一套相处之道</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12522493.md#1">Sana从没看过她生气 子瑜面对压力会让自己冷静</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524129.md#1">被寄养小狗花半个月走100公里回家找主人</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520485.md#1">足底筋膜炎4招改善！症状、治疗和复健全图解</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521919.md#1">传川普同意出售F-22战机给以色列</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/23/n12497346.md#1">生气就发飙？用情绪绑架他人这举动弱爆了</a></li>
+<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521656.md#1">为什么麦当劳的Logo使用黄色和红色？</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11816560.htm">干细胞募捐运动马拉松本周末抵达列治文山</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rmxaqt314/djy/blob/master/gb/20/1/24/n11816560.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rmxaqt314/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rmxaqt314/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
